<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:title="@string/title_rotation"
        android:key="@string/key_rotation"
        android:summary="%s"
        android:defaultValue="2"
        android:icon="@android:drawable/ic_menu_always_landscape_portrait"
        android:entries="@array/entries_rotation"
        android:entryValues="@array/values_rotation" />
    <CheckBoxPreference
        android:key="@string/key_night_mode"
        android:title="@string/title_night_mode"
        android:icon="@mipmap/night_mode"
        android:summaryOn="@string/on"
        android:summaryOff="@string/off"
        android:defaultValue="false" />
    <Preference
        android:key="@string/key_alarmclock"
        android:title="@string/title_alarm_clock"
        android:icon="@android:drawable/ic_menu_recent_history">
    </Preference>
    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="@string/key_foreground_color_normal"
        android:title="@string/title_foreground_color"
        android:defaultValue="@integer/COLOR_GREEN" />
    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="@string/key_background_color_normal"
        android:title="@string/title_background_color"
        android:defaultValue="@integer/COLOR_BLACK" />
    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="@string/key_foreground_color_night"
        android:title="@string/title_foreground_color"
        android:defaultValue="@integer/COLOR_DARKGREEN" />
    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="@string/key_background_color_night"
        android:title="@string/title_background_color"
        android:defaultValue="@integer/COLOR_BLACK" />
    <CheckBoxPreference
        android:key="@string/key_seconds"
        android:title="@string/title_seconds"
        android:summaryOn="@string/on"
        android:summaryOff="@string/off"
        android:defaultValue="false" />
    <CheckBoxPreference
        android:key="@string/key_keep_screen_on"
        android:title="@string/title_keep_screen_on"
        android:summaryOn="@string/yes"
        android:summaryOff="@string/no"
        android:defaultValue="true" />
</PreferenceScreen>
